# zsl

./: README.md  pyproject.toml  zsl_config.py
analyses/01-deceleration/: fit_bnsl.ipynb
analyses/01-deceleration/fig/: bnsl_fit.json
analyses/02-interference/: grad_intrf-viz.ipynb  grad_intrf_true-viz.ipynb  grad_intrf_true.py  loss_intrf-dt=1-gen.ipynb  loss_intrf-dt=1-viz.ipynb  loss_intrf-dt=t.ipynb
pretraining/configs/ablation-bsz_seq/: generate_configs.py  olmo_144M-base.sbatch  olmo_144M-base.yaml  olmo_144M-bsz_1M-seq_1024.sbatch  olmo_144M-bsz_1M-seq_1024.yaml  olmo_144M-bsz_1M-seq_2048.sbatch  olmo_144M-bsz_1M-seq_2048.yaml  olmo_144M-bsz_4M-seq_1024.sbatch  olmo_144M-bsz_4M-seq_1024.yaml  olmo_144M-bsz_4M-seq_2048.sbatch  olmo_144M-bsz_4M-seq_2048.yaml  olmo_14M-base.sbatch  olmo_14M-base.yaml  olmo_14M-bsz_1M-seq_1024.sbatch  olmo_14M-bsz_1M-seq_1024.yaml  olmo_14M-bsz_1M-seq_2048.sbatch  olmo_14M-bsz_1M-seq_2048.yaml  olmo_14M-bsz_4M-seq_1024.sbatch  olmo_14M-bsz_4M-seq_1024.yaml  olmo_14M-bsz_4M-seq_2048.sbatch  olmo_14M-bsz_4M-seq_2048.yaml
pretraining/configs/ablation-cosine/: olmo_cosine_144M.yaml  olmo_cosine_14M.yaml  (+4 more)
pretraining/download_olmo_data/: 0724-urls-aria2.txt  0724-urls.txt  README.md  create-aria2c-input.py
pretraining/nanogpt/: pyproject.toml  train.py  train_muon.py
pretraining/nanogpt/nanogpt/: model.py  muon.py
pretraining/nanogpt/nanogpt/optimizers/: cautious_adamw.py  muon.py
zsl_utils/: load_data.py  mpl.py  olmo.py  wandb_parse.py
zsl_utils/grad_analysis/: convert.py  embed.py  linear.py  reduce.py
(+44 files in other folders)
